--- a/Perturbed_Attention_Guidance_jupyter.ipynb
+++ b/Perturbed_Attention_Guidance_jupyter.ipynb
@@ -34,21 +34,29 @@
         "\n",
         "pipe = StableDiffusionPipeline.from_pretrained(\"runwayml/stable-diffusion-v1-5\", custom_pipeline=\"hyoungwoncho/sd_perturbed_attention_guidance\", torch_dtype=torch.float16)\n",
         "device=\"cuda\"\n",
-        "pipe = pipe.to(device)\n",
-        "\n",
+        "pipe = pipe.to(device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# hyperparameters\n",
         "\n",
         "pag_scale = 5.0\n",
         "pag_applied_layers_index = ['m0']\n",
-        "seed = 321\n",
+        "prompt = \"a corgi is standing next to flowers\"\n",
+        "seed = 1\n",
         "\n",
         "# sampling\n",
         "\n",
         "set_seed(seed)\n",
-        "latent_input = randn_tensor(shape=(1,4,64,64),generator=None, device=device, dtype=torch.float16)\n",
+        "latent_input = randn_tensor(shape=(1,4,64,64), generator=None, device=device, dtype=torch.float16)\n",
         "\n",
         "output_baseline = pipe(\n",
-        "    \"\",\n",
+        "    prompt,\n",
         "    width=512,\n",
         "    height=512,\n",
         "    num_inference_steps=50,\n",
@@ -60,7 +68,7 @@
         "output_baseline.save(f'uncond_baseline.png')\n",
         "\n",
         "output_pag = pipe(\n",
-        "    \"\",\n",
+        "    prompt,\n",
         "    width=512,\n",
         "    height=512,\n",
         "    num_inference_steps=50,\n",
@@ -70,7 +78,6 @@
         "    latents=latent_input\n",
         ").images[0]\n",
         "output_pag.save(f'uncond_pag.png')\n",
-        "\n",
         "\n",
         "uncond_baseline = cv2.imread('uncond_baseline.png')\n",
         "uncond_pag = cv2.imread('uncond_pag.png')\n",
